# omniconfig

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  environment.yml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  codeql.yml  pr.yml  release.yml
omniconfig/: __init__.py  args.py  configclass.py  parser.py  utils.py  version.py
src/omniconfig/: __init__.py  namespace.py  parser.py  registry.py
src/omniconfig/core/: __init__.py  exceptions.py  reference.py  types.py  utils.py
src/omniconfig/parsing/: __init__.py  cli_parser.py  file_loader.py  merger.py
src/omniconfig/resolution/: __init__.py  dependency.py  factory.py  node.py  state.py
test/: default.yaml  example.py
test/configs/: __default__.yaml  test.yaml
tests/: conftest.py
tests/omniconfig/: __init__.py  test_parser.py
tests/omniconfig/parsing/: __init__.py  test_cli_parser.py  test_file_loader.py
tests/omniconfig/resolution/: __init__.py  test_dependency.py  test_factory.py  test_node.py  test_state.py
