[tool.poetry]
name = "omniconfig"
version = "0.1.6"
description = "Python package for parsing configurations from YAML and TOML and command-line interface."
authors = ["Yujun Lin"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10 <4.0"
PyYAML = ">=6.0"
toml = ">=0.10"
docstring-parser = ">=0.15"

[tool.poetry.group.dev.dependencies]
flake8 = ">=7.0"
flake8-docstrings = ">=1.7"
isort = ">=5.13"
black = ">=24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120 # override black's default line-length
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.tmp
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# make it compatible with black
profile = "black"
multi_line_output = 3
line_length = 99
